# thermoflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  thermoflow_app.py
docs/superpowers/plans/: 2026-03-31-thermoflow-optimization.md  2026-04-19-thermoflow-tier1-improvements.md
docs/superpowers/specs/: 2026-03-31-thermoflow-optimization-design.md  2026-04-19-thermoflow-tier1-improvements-design.md
gui/: requirements.txt  streamlit_app.py
tests/: test_thermoflow.py
